@@ -13,29 +13,29 @@ public abstract class CmdPromptExecutor<T extends Message> extends MessageReceiv
      * Executes a terminal command
      * @param command  The command to execute
      */
-	protected void execCmd(String command) {
-		// Simple code to execute cmd line arguments
-		try {
-			Runtime.getRuntime().exec(
-					new String[] { "bash", "-c", command});
-		} catch (IOException e) {
-			e.printStackTrace();
-			// TODO: handle errors
-		}
-	}
-	
-	/**
-	 * Executes a terminal command
-	 * @param cmd  The command to execute, split into arguments
-	 */
-	protected void execAdvancedCmd(String... cmd) {
-		ProcessBuilder builder = new ProcessBuilder(cmd);
-		builder.redirectError(ProcessBuilder.Redirect.INHERIT);
-		try {
-			builder.start();
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-	}
+    protected void execCmd(String command) {
+        // Simple code to execute cmd line arguments
+        try {
+            Runtime.getRuntime().exec(
+                    new String[] { "bash", "-c", command});
+        } catch (IOException e) {
+            e.printStackTrace();
+            // TODO: handle errors
+        }
+    }
+    
+    /**
+     * Executes a terminal command
+     * @param cmd  The command to execute, split into arguments
+     */
+    protected void execAdvancedCmd(String... cmd) {
+        ProcessBuilder builder = new ProcessBuilder(cmd);
+        builder.redirectError(ProcessBuilder.Redirect.INHERIT);
+        try {
+            builder.start();
+        } catch (IOException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+    }
 }
